test/expected/explain_cast_typedef_i.out
explain (typedef int)x
                 ^
18: error: can not cast into typedef
